--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   },
   "license": "0BSD",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "bulma": "^0.9.1",
     "gatsby": "^2.26.1",
+    "gatsby-image": "^2.7.0",
+    "gatsby-plugin-fontawesome-css": "^1.0.0",
     "gatsby-plugin-image": "^0.3.1",
     "gatsby-plugin-manifest": "^2.8.0",
     "gatsby-plugin-offline": "^3.6.0",
