--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
     "bulma": "^0.9.1",
+    "deepai": "^1.0.16",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.7.0",
     "gatsby-plugin-fontawesome-css": "^1.0.0",
