--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
     "bulma": "^0.9.1",
+    "bulma-popover": "^1.0.3",
     "deepai": "^1.0.16",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.7.0",
